--- a/content/articles/1.md
+++ b/content/articles/1.md
@@ -1,1 +1,8 @@
+---
+title: "Test Articles no1"
+date: "2025-04-25"
+description: "これはテスト記事1の説明文です。30字程度の要約を記載します。"
+thumbnail: "https://images.worldwidehisa.net/blogTEST240x240.png"
+---
+
 # Test Articles no1
