--- a/content/articles/2.md
+++ b/content/articles/2.md
@@ -1,1 +1,8 @@
+---
+title: "Test Articles no2"
+date: "2025-04-26"
+description: "これはテスト記事2の説明文です。30字程度の要約を記載します。"
+thumbnail: "https://images.worldwidehisa.net/blogTEST240x240.png"
+---
+
 # Test Articles no2
