--- a/content/articles/3.md
+++ b/content/articles/3.md
@@ -1,1 +1,8 @@
+---
+title: "Test Articles no3"
+date: "2025-04-27"
+description: "これはテスト記事3の説明文です。30字程度の要約を記載します。"
+thumbnail: "https://images.worldwidehisa.net/blogTEST240x240.png"
+---
+
 # Test Articles no3
