--- a/content/articles/20250429.md
+++ b/content/articles/20250429.md
@@ -29,6 +29,8 @@ https://images.worldwidehisa.net/20250429-03.jpg
 アンチ塩ラーメン的な気配を漂わせて生活しているが、そんな我でも納得のおいしさ。
 https://images.worldwidehisa.net/20250429-04.avif
 
+# 猫カフェ
+
 最後は猫カフェデビュー、カフェっていうか1ドリンクで猫触り放題的なやつ
 近所の野良猫をはじめ猫どもにも個性があることがわかってきた。
 https://images.worldwidehisa.net/20250429-05.jpg
