--- a/content/articles/20250429.md
+++ b/content/articles/20250429.md
@@ -6,37 +6,41 @@ thumbnail: "https://images.worldwidehisa.net/20250429-th.avif"
 tags: ["日記", "お出かけ"]
 ---
 
-# 谷中銀座へ行った
-記念すべきブログ一発目。
-4/29に日暮里駅から徒歩数分で行ける谷中銀座商店街へ行った
-日暮里駅から徒歩数分、昔ながらのレトロな雰囲気が人気らしい...歴史的な話はよく知らないし調べていない
+# 谷中銀座商店街
+記念すべきブログ1発目。  
+4/29に日暮里駅から徒歩数分で行ける谷中銀座商店街へ行った。  
+日暮里駅から徒歩数分、昔ながらのレトロな雰囲気が人気らしい...歴史的な話はよく知らないし調べていない。  
 
-夕やけだんだん(？)という坂道が有名でそこからの写真
-https://images.worldwidehisa.net/20250429-01.jpg
+夕やけだんだん(？)という坂道が有名でそこからの写真。  
+夕焼けタイミングで野良猫が昔は並ぶのが有名なんだとか。
+![](https://images.worldwidehisa.net/20250429-01.jpg)
 
-がやがやした商店街という感じで、今は観光に来た外国人で溢れていた。
+がやがやした商店街という感じで、今は観光に来た外国人で溢れていた。  
 
-「暮らしの道具 谷中松野屋」という素朴な日用品を売っているお店が楽しかった。
-きれいなガラス製品とか竹のカゴ的なやつとか小さくてかわいいものが多く見ているだけで楽しいやつだった。
+「暮らしの道具 谷中松野屋」という素朴な日用品を売っているお店が楽しかった。  
+きれいなガラス製品とか竹のカゴ的なやつとか小さくてかわいいものが多く見ているだけで楽しいやつだった。  
 
-突然のハンコ壁、伊藤でバリエーションが展開されている。
-https://images.worldwidehisa.net/20250429-02.jpg
+突然のハンコ壁、伊藤でバリエーションが展開されている。  
+![](https://images.worldwidehisa.net/20250429-02.jpg)
 
-猫の像、野良猫がたくさんいたらしく基本お店のマスコットは猫で展開されていがち。
-https://images.worldwidehisa.net/20250429-03.jpg
+猫の像、この商店街の地域には野良猫がたくさん居るらしく基本お店のマスコットは猫で展開されていがち。  
+![](https://images.worldwidehisa.net/20250429-03.jpg)
 
-昼はラーメン、麺や ひだまりというお店の塩ラーメン
-アンチ塩ラーメン的な気配を漂わせて生活しているが、そんな我でも納得のおいしさ。
-https://images.worldwidehisa.net/20250429-04.avif
+昼はラーメン、麺や ひだまりというお店の塩ラーメンを食べた。  
+アンチ塩ラーメン的な気配を漂わせて生活しているが、それでも腕組するくらい美味しかったのでおすすめ。  
+![](https://images.worldwidehisa.net/20250429-04.avif)
 
 # 猫カフェ
 
-最後は猫カフェデビュー、カフェっていうか1ドリンクで猫触り放題的なやつ
-近所の野良猫をはじめ猫どもにも個性があることがわかってきた。
-https://images.worldwidehisa.net/20250429-05.jpg
+最後は猫カフェデビュー、カフェっていうか1ドリンクで猫触り放題的なやつ。  
+GWに紛れて平日にお休みを取っていったのでかなり貸し切りに近い状態だった。  
+常連のおばちゃんが一人だけ居た。
+近所の野良猫をはじめ、猫どもにもかなりの個性があることがわかってきた。  
+![](https://images.worldwidehisa.net/20250429-05.jpg)
 
-妻と餌ガチャをやったけどお互いに一番グレードの低いカリカリを引いた。
-カリカリをあげるときに猫によっては手ごと食う愚か者がいて無事に負傷した。
-痛えんだなこれが。
+妻と餌ガチャをやったけどお互いに一番グレードの低いカリカリを引いた。  
+カリカリをあげるときに猫によっては手ごと食う愚か者がいて無事に負傷した。  
+痛えんだなこれが。  
 
-総合的にレトロな商店街と言う割には、トルコランプのお店とかおしゃれなカフェとかが乱立してて普通の観光スポットとしても楽しめる感じだったので、ちょっと混んでる感じなのが好きな人はおすすめでした。
+総合的にレトロな商店街と言う割には、謎にトルコランプのお店があったり、観光地特有のおしゃれなカフェが乱立してて、普通の観光スポットらしい側面も強いので特に下調べなしでも楽しめた。  
+外国人による混雑がすごいので、そういうの含め好きな人はおすすめ。
